--- a/assets/src/style/main.scss
+++ b/assets/src/style/main.scss
@@ -13,8 +13,11 @@
 
 //PAGES
 @import "pages/index";
+@import "pages/press";
+@import "pages/reviews";
 
 //COMPONENTS
+@import "components/mailing";
 @import "components/footer";
 @import "components/media";
 
