--- a/assets/src/style/pages/index.scss
+++ b/assets/src/style/pages/index.scss
@@ -3,16 +3,36 @@
         color: #fff;
     }
     .page-content{
-        padding-bottom: 120px;
+        padding-bottom: 0;
         >.container-fluid{
             max-width: 100%;
             padding: 0;
         }
     }
+    .page-pre {
+        min-height: inherit!important;
+        margin-bottom: 0!important;
+        padding: 0!important;
+    }
+}
+
+.slide-m-prev{
+    &.slick-disabled{
+        pointer-events: none!important;
+        opacity: 0.5;
+    }
+}
+
+.slide-m-next{
+    &.slick-disabled{
+        pointer-events: none!important;
+        opacity: 0.5;
+    }
 }
 
 .index-top-wrap{
-    margin-bottom: 130px;
+    margin-bottom: 126px;
+    position: relative;
     .breadcrumbs{
         margin: 0;
         position: absolute;
@@ -27,17 +47,325 @@
     font-size: 40px;
     line-height: 1.2;
     font-family: 'als_gorizontregular_expanded';
+    span{
+        position: relative;
+        z-index: 1;
+    }
 }
 .index-catalog{
-    padding-bottom: 118px;
+    padding-bottom: 95px;
     .index-title{
-        margin-bottom: 100px;
+        position: relative;
+        &:before{
+            content: "";
+            display: inline-block;
+            position: absolute;
+            width: 466px;
+            height: 11px;
+            left: -54px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: #E8E8E8;
+        }
     }
+    .index-title-complex{
+        margin-bottom: 104px;
+    }
+}
+.index-catalog-slider{
+    padding-bottom: 100px;
 }
 .index-leasing{
     background: #D4D6D8;
-    padding: 75px 0 106px;
+    padding: 93px 0 106px;
+    position: relative;
+    z-index: 2;
+    .index-title-complex{
+        margin-bottom: 47px;
+    }
+    .index-title{
+        position: relative;
+        &:before{
+            content: "";
+            display: inline-block;
+            position: absolute;
+            width: 466px;
+            height: 11px;
+            left: -54px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: #E0E1E3;
+        }
+    }
 }
+
+.index-leasing__wrap{
+    display: flex;
+    justify-content: space-between;
+}
+
+.index-title-wrap__add{
+    font-size: 24px;
+    line-height: 1;
+    font-family: 'als_gorizontregular_expanded';
+}
+.index-leasing__view{
+    width: 400px;
+    margin-left: 200px;
+    .checkbox-item{
+        margin-bottom: 40px;
+    }
+}
+.index-leasing-result{
+    margin-bottom: 48px;
+}
+.index-leasing-result__item{
+    background: #fff;
+    text-align: center;
+    margin-bottom: 24px;
+    padding: 36px 15px;
+    &:last-child{
+        margin-bottom: 0;
+    }
+}
+.index-leasing-result__title{
+    margin-bottom: 7px;
+}
+.index-leasing-result__view{
+    color: #B8543E;
+    font-size: 30px;
+    font-family: 'als_gorizontregular_expanded';
+    span{
+        font-size: 18px;
+        display: inline-block;
+        margin-left: 10px;
+    }
+}
+.index-leasing__submit{
+    input[type="submit"]{
+        width: 100%;
+    }
+}
+
+.index-leasing-toggle{
+    flex-grow:1;
+    padding-top: 30px;
+}
+.index-leasing-toggle__item{
+    margin-bottom: 20px;
+}
+
+.index-leasing-toggle__add{
+    padding-top: 18px;
+    font-size: 12px;
+    line-height: 1.5;
+}
+.slider-count__add{
+    margin-bottom: 10px;
+}
+.slider-count{
+    margin-bottom: 15px;
+    &:last-child{
+        margin-bottom: 0;
+    }
+    input[type="text"]{
+        padding: 11.5px 30px;
+        background: transparent!important;
+        opacity: 0;
+    }
+
+    .ui-button, .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, html .ui-button.ui-state-disabled:active, html .ui-button.ui-state-disabled:hover{
+        width: 14px;
+        height: 14px;
+        background: #fff;
+        border: 1.5px solid #d74e2e;
+        top: auto;
+        margin-left: -7px;
+        border-radius: 50%;
+        cursor: pointer;
+        z-index: 3;
+        bottom: -7px;
+    }
+    .ui-widget.ui-widget-content {
+        border: 0;
+        background: #BDBFC3;
+        border-radius: 0;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        border-radius: 3px;
+        border-bottom: 1px solid #828282;
+        &:before{
+            content: "";
+            display: inline-block;
+            width: 1.5px;
+            height: 5px;
+            background: #d74e2e;
+            position: absolute;
+            left: -.75px;
+            bottom: 0;
+            z-index: 2;
+        }
+        &:after{
+            content: "";
+            display: inline-block;
+            width: 1.5px;
+            height: 5px;
+            background: #828282;
+            position: absolute;
+            right: -.75px;
+            bottom: 0;
+            z-index: 2;
+        }
+    }
+    .ui-widget-header{
+        background: #fff;
+        height: 52px;
+        margin-top: 0;
+        top: auto;
+        bottom: 0;
+        border-radius: 3px;
+        border-bottom: 2px solid #d74e2e;
+        margin-bottom: -2px;
+        // &:before{
+        //     content: "";
+        //     display: block;
+        //     height: 48px;
+        //     width: 100%;
+        //     position: absolute;
+        //     left: 0;
+        //     bottom: 2px;
+        //     background: #fff;
+        //     border-radius: 3px;
+        //     // border-top-right-radius: 0;
+        // }
+    }
+}
+.slider-count-wrap{
+    border-radius: 3px 3px 0px 0px;
+    background: #bdbfc3;
+    position: relative;
+    //overflow: hidden;
+}
+.index-leasing-indicators{
+    display: flex;
+    justify-content: space-between;
+}
+.index-leasing-indicators__item{
+    color: #4F4F4F;
+    font-size: 14px;
+    line-height: 1;
+    span{
+        display: inline-block;
+        margin-left: 5px;
+    }
+}
+
+.slider-count-view{
+    position: absolute;
+    width: 100%;
+    height: calc(100% - 7px);
+    left: 0;
+    top: 0;
+    display: flex;
+    z-index: 2;
+    font-size: 18px;
+    color: #B8543E;
+    font-family: 'als_gorizontregular_expanded';
+    line-height: 50px;
+    padding-left: 20px;
+    pointer-events: none;
+}
+
+
+.slider-count-view__all{
+    display: flex;
+    align-items: baseline;
+    &:before{
+        content: "/";
+        margin: 0 6px 0 5px;
+    }
+    span{
+        font-size: 12px;
+        margin-left: 5px;
+    }
+}
+
+.slider-count-view__toggle{
+    display: flex;
+    align-items: baseline;
+    span{
+        font-size: 12px;
+        margin-left: 5px;
+    }
+}
+
+
+
+
+
+
+
+.index-leasing-buttons{
+    border: 1px solid #828282;
+    border-radius: 20px;
+    display: flex;
+    width: 400px;
+    position: relative;
+    top: 11px;
+}
+.index-leasing-buttons__link{
+    color: #4F4F4F;
+    font-size: 20px;
+    border: 1px solid transparent;
+    margin: -1px;
+    display: block;
+    padding: 4px 27px;
+    position: relative;
+    transition: all .3s ease;
+    flex-grow:1;
+    text-align: center;
+    &:hover{
+        color: #D74E2E;
+    }
+    &:after{
+        content: "";
+        display: inline-block;
+        width: 1px;
+        height: 10px;
+        background-color: #828282;
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    &:first-child{
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+    }
+    &:last-child{
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+        &:after{
+            display: none;
+        }
+    }
+    &.active{
+        color: #D74E2E;
+        border: 1px solid #D74E2E;
+        border-radius: 20px;
+        &:after{
+            display: none;
+        }
+    }
+}
+
+
+
+
+
 
 .index-top__img{
     background-position: center;
@@ -120,4 +448,388 @@
             color: #fff;
         }
     }
+}
+
+
+
+
+.slider-nav{
+    position: absolute;
+    color: #fff;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    width: 100%;
+    max-width: 1240px;
+    padding: 0 20px;
+    justify-content: flex-end;
+    align-items: center;
+    bottom: 49px;
+    z-index: 2;
+    pointer-events: none;
+    .slide-m-next{
+        background: url(../img/svg/next.svg) center no-repeat;
+        width: 41px;
+        height: 8px;
+        position: relative;
+        pointer-events: all;
+        cursor: pointer;
+        margin-left: 20px;
+        &:hover{
+            background: url(../img/svg/next-h.svg) center no-repeat;
+        }
+    }
+    .slide-m-prev{
+        background: url(../img/svg/prev.svg) center no-repeat;
+        width: 41px;
+        height: 8px;
+        position: relative;
+        pointer-events: all;
+        cursor: pointer;
+        margin-right: 20px;
+
+        &:hover{
+            background: url(../img/svg/prev-h.svg) center no-repeat;
+        }
+    }
+}
+
+.pagingInfo{
+    font-family: 'als_gorizontregular_expanded';
+    min-width: 91px;
+}
+.s-current{
+    font-size: 28px;
+}
+.s-total{
+    font-size: 18px;
+}
+
+
+
+
+.index-news{
+    padding: 120px 0 0;
+    margin-bottom: 112px;
+    .index-title{
+        position: relative;
+        &:before{
+            content: "";
+            display: inline-block;
+            position: absolute;
+            width: 284px;
+            height: 11px;
+            left: -54px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: #E8E8E8;
+        }
+    }
+}
+.index-title-complex{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 77px;
+    &.m-bottom{
+        align-items: flex-end;
+    }
+}
+.title-btn-wrap{
+    display: flex;
+}
+.title-btn{
+    border: 1px solid #828282;
+    box-sizing: border-box;
+    border-radius: 20px;
+    padding: 10px 29px;
+    color: #4f4f4f;
+    line-height: 1;
+    transition: all .3s ease;
+    margin-right: 20px;
+    &:last-child{
+        margin-right: 0;
+    }
+    &:hover{
+        color: #B8543E;
+        border: 1px solid #B8543E;
+    }
+    &:active{
+        color: #B8543E;
+        border: 1px solid #B8543E;
+    }
+    &.m-active{
+        color: #B8543E;
+        border: 1px solid #B8543E;
+        pointer-events: none;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.index-news-wrap{
+    position: relative;
+    .slider-nav{
+        color: #4F4F4F;
+        bottom: -5px;
+        .slide-m-prev {
+            background: url(../img/svg/prev-b.svg) center no-repeat;
+            &:hover{
+                background: url(../img/svg/prev-h.svg) center no-repeat;
+            }
+        }
+        .slide-m-next {
+            background: url(../img/svg/next-b.svg) center no-repeat;
+            &:hover{
+                background: url(../img/svg/next-h.svg) center no-repeat;
+            }
+        }
+    }
+
+
+    
+}
+
+.index-news__slider{
+    .slick-list{
+        padding-bottom: 120px;
+        margin-right: -20px;
+    }
+    .page-news__item{
+        position: relative;
+        transition: transform .2s ease;
+    }
+    
+    .slick-current{
+        transform: translateY(120px);
+    }
+}
+
+
+
+.index-catalog-wrap{
+    margin-bottom: 25px;
+    position: relative;
+    .slider-nav{
+        color: #4F4F4F;
+        bottom: 9px;
+        padding: 0;
+        .slide-m-prev {
+            background: url(../img/svg/prev-b.svg) center no-repeat;
+            &:hover{
+                background: url(../img/svg/prev-h.svg) center no-repeat;
+            }
+        }
+        .slide-m-next {
+            background: url(../img/svg/next-b.svg) center no-repeat;
+            &:hover{
+                background: url(../img/svg/next-h.svg) center no-repeat;
+            }
+        }
+    }
+}
+.index-catalog{
+    .slick-list{
+        margin-right: -20px;
+    }
+    .slick-track {
+        display: flex;
+        min-width: 100%;
+    }
+}
+.index-catalog__item{
+    padding-right: 20px;
+    height: auto!important;
+    &.slick-current,
+    &:hover{
+        .index-catalog__inner{
+            background: #fff;
+        }
+    }
+}
+
+.index-catalog__inner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 33px;
+    height: 100%;
+    transition: background .3s ease;
+    img{
+        max-width: 100%;
+        display: block;
+    }
+}
+
+.index-catalog-btn-wrap{
+    display: flex;
+    justify-content: center;
+}
+.index-catalog-btn{
+    border: 1.5px solid #D74E2E;
+    border-radius: 3px;
+    color: #D74E2E;
+    padding: 15px 55px;
+    transition: all .3s ease;
+    &:hover{
+        background: #fff;
+    }
+    &:active{
+        border: 1.5px solid #B8543E;
+        color: #B8543E;
+        background: #fff;
+    }
+}
+
+
+.index-services{
+    padding-top: 112px;
+    padding-bottom: 120px;
+    position: relative;
+    background: #D4D6D8;
+    &:before{
+        content: "";
+        display: block;
+        width: 80px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 100%;
+        background: #D4D6D8;
+    }
+    &:after{
+        content: "";
+        display: block;
+        width: 80px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 100%;
+        background: #D4D6D8;
+    }
+    .container-fluid{
+        z-index: 2;
+    }
+    .index-title-complex{
+        margin-bottom: 100px;
+    }
+    .index-title{
+        position: relative;
+        &:before{
+            content: "";
+            display: inline-block;
+            position: absolute;
+            width: 251px;
+            height: 11px;
+            left: -54px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: #e8e8e8;
+        }
+    }
+}
+.index-services__pre {
+    height: 636px;
+    width: calc(100% + 160px);
+    background: #fff;
+    position: absolute;
+    left: -80px;
+    top: -140px;
+    z-index: 1;
+}
+
+.index-services-wrap{
+    position: relative;
+    margin-bottom: 115px;
+    // max-width: 1470px;
+    z-index: 2;
+
+    .slider-nav {
+        color: #4f4f4f;
+        bottom: -5px;
+        // max-width: 1480px;
+        //padding: 0;
+        .slide-m-prev {
+            background: url(../img/svg/prev-b.svg) center no-repeat;
+            &:hover{
+                background: url(../img/svg/prev-h.svg) center no-repeat;
+            }
+        }
+        .slide-m-next {
+            background: url(../img/svg/next-b.svg) center no-repeat;
+            &:hover{
+                background: url(../img/svg/next-h.svg) center no-repeat;
+            }
+        }
+    }
+    .slick-list {
+        padding-bottom: 0;
+        margin-right: -20px;
+        padding-bottom: 120px;
+    }
+    
+}
+
+.index-services__slider{
+    
+    .slick-current {
+        transform: translateY(120px);
+    }
+}
+
+.page-news__item{
+    transition: transform .2s ease;
+}
+
+
+
+.index-services-view{
+    display: flex;
+    margin-right: -560px;
+    padding-left: 40px;
+    color: #333;
+}
+.index-services-view__info{
+    width: 50%;
+    background: #fff;
+    padding: 124px 338px 126px 60px;
+    h2{
+        line-height: 1.1;
+        margin-bottom: 45px;
+        position: relative;
+        &:before{
+            content: "";
+            display: inline-block;
+            position: absolute;
+            width: 264px;
+            height: 11px;
+            left: -54px;
+            top: 17px;
+            background: #E8E8E8;
+        }
+        span{
+            position: relative;
+        }
+    }
+    li{
+        &.active{
+            color: $alt-color;
+        }
+    }
+}
+.index-services-view__img{
+    width: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 50px 0 50px -290px;
 }
