--- a/assets/src/style/variables.scss
+++ b/assets/src/style/variables.scss
@@ -6,7 +6,7 @@ $default-font:'qanelasregular', Arial, sans-serif;
 $default-size-font: 18px;
 
 /*BACKGROUND*/
-$default-site-bg: #E5E5E5;
+$default-site-bg: #f6f6f6;
 //$alt-site-bg: #7A1774;
 
 //$default-bg: #eeeeee;
