--- a/assets/src/style/components/workarea.scss
+++ b/assets/src/style/components/workarea.scss
@@ -86,6 +86,13 @@
 		text-align: center;
 		padding: 16.5px 10px;
 		border: 0;
+		transition: all .3s ease;
+		&:hover{
+			background: #B8543E;
+		}
+		&:active{
+			background: #894039;
+		}	
 	}
 	textarea{
 		display: block;
@@ -256,15 +263,11 @@
 	input[type="checkbox"]:checked + label{
 		position: relative;
 		cursor: pointer;
-		    padding-left: 32px;
-    	line-height: 24px;
+		    padding-left: 50px;
+    	line-height: 20px;
 		display: inline-block;
-		font-size: 14px;
+		font-size: 16px;
 	}
-	input[type="checkbox"] + label{
-		color: #22140B;
-	}
-
 
 	input[type="checkbox"]:not(:checked) + label:before,
 	input[type="checkbox"]:checked + label:before{
@@ -272,32 +275,31 @@
 		position: absolute;
 		left: 0px;
 		top: 0;
-		background: #FFFFFF;
-		border: 1px solid #E3E0EB;
-		border-radius: 4px;
+		border: 1px solid #828282;
+		border-radius: 1px;
 		cursor: pointer;
 		z-index: 5;
-		width: 24px;
-		height: 24px;
+		width: 20px;
+		height: 20px;
 		transition: all .3s ease;
 	}
-	input[type="checkbox"]:not(:checked) + label:hover:before,
-	input[type="checkbox"]:checked + label:hover:before{
-		border: 1px solid #7A1774;
-	}
-	input[type="checkbox"]:checked + label:before{
-		border: 1px solid #7A1774;
-	}
+	// input[type="checkbox"]:not(:checked) + label:hover:before,
+	// input[type="checkbox"]:checked + label:hover:before{
+	// 	border: 1px solid #7A1774;
+	// }
+	// input[type="checkbox"]:checked + label:before{
+	// 	border: 1px solid #7A1774;
+	// }
 	input[type="checkbox"]:not(:checked) + label:after,
 	input[type="checkbox"]:checked + label:after {
 		content: '';
 		background: url(../img/svg/check.svg) center no-repeat;
-		width: 16px;
-		height: 13px;
+		width: 14px;
+		height: 11px;
 		display: inline-block;
 		position: absolute;
-		top: 6px;
-    	left: 5px;
+		top: 4px;
+    	left: 3px;
 		z-index: 10;
 	}
 	input[type="checkbox"]:not(:checked) + label:after {
